--- a/inder.html
+++ b/inder.html
@@ -3,16 +3,16 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Chuc mung ngay 8-3</title>
-    <link type="text/css" rel="stylesheet" href="asset/style.css">
-    <script type="text/javascript" src="asset/jquery.min.js"></script>
-    <script type="text/javascript" src="asset/jscex.min.js"></script>
-    <script type="text/javascript" src="asset/jscex-parser.js"></script>
-    <script type="text/javascript" src="asset/jscex-jit.js"></script>
-    <script type="text/javascript" src="asset/jscex-builderbase.min.js"></script>
-    <script type="text/javascript" src="asset/jscex-async.min.js"></script>
-    <script type="text/javascript" src="asset/jscex-async-powerpack.min.js"></script>
-    <script type="text/javascript" src="asset/functions.js" charset="utf-8"></script>
-    <script type="text/javascript" src="asset/love.js" charset="utf-8"></script>
+    <link type="text/css" rel="stylesheet" href="/mung8-3/asset/style.css">
+    <script type="text/javascript" src="/mung8-3/asset/jquery.min.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/jscex.min.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/jscex-parser.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/jscex-jit.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/jscex-builderbase.min.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/jscex-async.min.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/jscex-async-powerpack.min.js"></script>
+    <script type="text/javascript" src="/mung8-3/asset/functions.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/mung8-3/asset/love.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     </div>
 
     <audio id="myAudio" autoplay="autoplay">
-        <source src="music/nhac.mp3" type="audio/mp3" />
+        <source src="/mung8-3/music/nhac.mp3" type="audio/mp3" />
     </audio>
 
 </body>
